--- a/reactive-flashcards/build.gradle
+++ b/reactive-flashcards/build.gradle
@@ -23,7 +23,7 @@ repositories {
 }
 
 ext{
-	mapstructVersion = '1.5.0.Final'
+	mapstructVersion = '1.5.1.Final'
 }
 
 dependencies {
@@ -31,14 +31,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.mapstruct:mapstruct:1.5.0.Final'
+	implementation 'org.mapstruct:mapstruct:1.5.1.Final'
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
 	implementation 'org.apache.commons:commons-collections4:4.4'
 
 	compileOnly 'org.projectlombok:lombok'
 
 	annotationProcessor 'org.projectlombok:lombok'
-	annotationProcessor 'org.mapstruct:mapstruct:1.5.0.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.1.Final'
 	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
