--- a/reactive-flashcards/src/main/resources/application.yml
+++ b/reactive-flashcards/src/main/resources/application.yml
@@ -3,4 +3,4 @@ spring:
     base-path: /reactive-flashcards
   data:
     mongodb:
-      uri: mongodb://reactive-flashcards:reactive-flashcards@db:27017/reactive-flashcards
+      uri: mongodb://reactive-flashcards:reactive-flashcards@db:27017/reactive-flashcards?authSource=admin
